cmake_minimum_required(VERSION 3.5)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_COMPILER /usr/bin/clang)
project(error_handling LANGUAGES C VERSION 1.0)
add_compile_options(-Wall -Werror -Wpedantic)
add_library(error_handling error_handling.c)
target_include_directories(error_handling PRIVATE ${CMAKE_SOURCE_DIR})

enable_testing()
add_executable(test_error_debug test_error_debug.c error_handling.c)
target_include_directories(test_error_debug PRIVATE ${CMAKE_SOURCE_DIR})
add_test(NAME test_error_debug COMMAND test_error_debug)
